# object_following

./: .gitignore  README.md  package.xml  setup.py
data/: capture_data_zed.py  get_final_images.py  get_img_from_video.py
runs/detect/train2/: args.yaml  events.out.tfevents.1701203067.CTB455-Salmon.323928.0  results.csv
src/: run_neck_detect.py
src/arduino/: arduino.ino
