<?xml version="1.0"?>
<package>
  <name>josh_vision</name>
  <version>0.0.0</version>
  <description>Josh Vision, 6D Pose Estimation</description>

  <maintainer email="daniel@todo.todo">daniel</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>


</package>
